# cdj3k-emu

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  boot.sh  build.sh  bundle.sh
app/cdj3k-emu/: Cargo.toml  build.rs
app/cdj3k-emu/assets/: cdj3k-emu.icns
app/cdj3k-emu/src/: main.rs  runtime_worker.rs
crates/cdj3k-emu-firmware/: Cargo.toml
crates/cdj3k-emu-firmware/src/: extract.rs  initramfs.rs  lib.rs  luks.rs
crates/cdj3k-emu-firmware/src/luks/: crypto.rs
crates/cdj3k-emu-platform/: Cargo.toml
crates/cdj3k-emu-platform/src/: app_meta.rs  audio_devices.rs  bundled.rs  fonts.rs  haptic.rs  host.rs  lib.rs  menu.rs  menu_state.rs  runtime_paths.rs
crates/cdj3k-emu-platform/src/desktop/: macos.rs  mod.rs
crates/cdj3k-emu-platform/src/menu/: launch.rs
crates/cdj3k-emu-runtime/: Cargo.toml  build.rs
crates/cdj3k-emu-runtime/src/: cfg.rs  config.rs  ffi.rs  instance.rs  lib.rs  macos_disk.rs  qmp.rs  shutdown.rs  tapbridge.rs  usb.rs  vmnet.rs
crates/cdj3k-emu-storage/: Cargo.toml
crates/cdj3k-emu-storage/src/: emmc.rs  gpt.rs  lib.rs  settings.rs
crates/cdj3k-emu-streams/: Cargo.toml
crates/cdj3k-emu-streams/src/: ctrl_stream.rs  jog_stream.rs  lib.rs  main_stream.rs  repaint_gate.rs
crates/cdj3k-emu-subucom/: Cargo.toml
crates/cdj3k-emu-subucom/src/: crc.rs  direction.rs  lib.rs  miso_frame.rs  mosi_frame.rs
crates/cdj3k-emu-ui/: Cargo.toml
crates/cdj3k-emu-ui/src/: app.rs
crates/cdj3k-emu-ui/src/app/: bloom.rs  boot_overlay.rs  buttons.rs  firmware_wizard.rs  frame_cache.rs  frame_inject.rs  jog_physics.rs  lcd_texture.rs  lcd_touch.rs  ui.rs  viewports.rs
crates/cdj3k-emu-ui/src/app/ui/: draw_cache.rs  draw_chassis.rs  draw_jog.rs  draw_left.rs  draw_primitives.rs  draw_right.rs  draw_top.rs  layout.rs
crates/cdj3k-emu-ui/src/app/ui/draw_jog/: geometry.rs  statics.rs
crates/cdj3k-emu-ui/src/app/ui/draw_left/: direction.rs  statics.rs
crates/cdj3k-emu-ui/src/app/ui/draw_primitives/: buttons.rs
crates/cdj3k-emu-ui/src/app/ui/draw_right/: nav_rotary.rs  statics.rs  vinyl_speed.rs
docker/: Dockerfile
docs/: alc.md  audio-stack.md  g2m-renesas.md  network.md  storage.md  stream-transports.md  subucom.md
guest/: Makefile
guest/cfgd/: cfgd.c
guest/ep122_shim/: clock.c  ep122_shim.c  ep122_shim.h  fd.c  jog.c  jog_drm.c  jog_shm.c  link.c  syscalls.c  syscalls_io.c
guest/kernel-patches/: 01-virtio-blk-naming.patch  02-virtgpu-display-dsi2.patch  03-dummy-period-size.patch  04-virtgpu-kms-drop-version1-guard.patch  cdj3k-emu-kernel.config
guest/modules/: Makefile
guest/modules/subucom_virt/: Makefile  subucom_virt.c
guest/modules/udev_usb1/: Makefile  udev_usb1.c
guest/modules/virtio_snd/: Makefile  virtio_snd.c
guest/subucom/: forwarder.c  live.c
initramfs-patch/: patch-rootfs.sh  repack.sh  unpack-initramfs.sh
initramfs-patch/patch-rootfs.d/: 01-sn65-stub.sh  02-dropbear-key.sh  03-dropbear-enable.sh  04-root-password.sh  06-eth0-dhcp.sh  08-insmod-subucom-virt.sh  09-pre-setting-ordering.sh  10-usb-drive-mount.sh  11-virtio-stream-services.sh  13-ep122-shim-preload.sh  16-xorg-modesetting-conf.sh  17-insmod-virtio-snd.sh  19-usb-external.sh  20-unbind-usb-device.sh  21-cfgd.sh  22-vanilla-kernel-fixups.sh  25-xorg-headless.sh  27-udev-usb1.sh
qemu/: build.sh
qemu/patches/: 01-ivshmem-meson.patch  02-ivshmem-event-notifier.patch  03-ivshmem-kconfig.patch  04-shm-display-qapi.patch  05-shm-display-meson.patch  06-shm-display-source.patch  07-coreaudio-bypass.patch  08-virtio-snd-bypass.patch  09-system-main-qos.patch  10-virtio-blk-removable.patch  11-console-vc-quiet.patch  12-hvf-vcpu-qos.patch
qemu/shim/: cdj3k_emu_shim.c
tools/upd-decrypt/: .dockerignore  Dockerfile  decrypt.sh  upd-decrypt.sh
