[package]
name = "cdj3k-emu"
description = "macOS desktop app booting Pioneer CDJ-3000 firmware in QEMU with native window/menu."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "cdj3k-emu"
path = "src/main.rs"

[dependencies]
cdj3k-emu-ui = { path = "../../crates/cdj3k-emu-ui" }
cdj3k-emu-platform = { path = "../../crates/cdj3k-emu-platform" }
cdj3k-emu-runtime = { path = "../../crates/cdj3k-emu-runtime" }
cdj3k-emu-storage = { path = "../../crates/cdj3k-emu-storage" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
libc = "0.2"
