[package]
name = "cdj3k-emu-ui"
description = "egui-based CDJ-3000 chassis renderer: jog wheel physics, LCD compositing, pop-out viewports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
cdj3k-emu-subucom = { path = "../cdj3k-emu-subucom" }
cdj3k-emu-streams = { path = "../cdj3k-emu-streams" }
cdj3k-emu-platform = { path = "../cdj3k-emu-platform" }
cdj3k-emu-firmware = { path = "../cdj3k-emu-firmware" }
cdj3k-emu-storage = { path = "../cdj3k-emu-storage" }
cdj3k-emu-runtime = { path = "../cdj3k-emu-runtime" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
glow = "0.14"
puffin = "0.19"
puffin_http = "0.16"
